Hice cambnios al index

--- a/www/index.html
+++ b/www/index.html
@@ -100,7 +100,7 @@
                       <div class="swiper-slide">
 			 <img src="images/slider/slider-ayoloco.jpg" alt="" title="" />
        <div class="slider-caption">
-        <h2 data-swiper-parallax="-100%">¿Estas listo WEY?</h2>
+        <h2 data-swiper-parallax="-100%">¡YA NO MAMES!</h2>
         <span class="subtitle" data-swiper-parallax="-60%">Para escalar el tercer pico mas alto de México.</span>
         <p data-swiper-parallax="-30%">Iztaccíhuatl a 5280 msnm.</p>
         </div>
