modifique los textos del slider 3 y unos datos del menú

--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -8,7 +8,7 @@
 <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
 <link href="images/apple-touch-startup-image-320x460.png" media="(device-width: 320px)" rel="apple-touch-startup-image">
 <link href="images/apple-touch-startup-image-640x920.png" media="(device-width: 320px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image">
-<title>upmobile - HTML mobile template</title>
+<title>Club Alpino Ayoloco App</title>
 <link rel="stylesheet" href="css/framework7.css">
 <link rel="stylesheet" href="style.css">
 <link type="text/css" rel="stylesheet" href="css/swipebox.css" />
@@ -100,7 +100,7 @@
                       <div class="swiper-slide">
 			 <img src="images/slider/slider-ayoloco.jpg" alt="" title="" />
        <div class="slider-caption">
-        <h2 data-swiper-parallax="-100%">¿Estas listo WEY?</h2>
+        <h2 data-swiper-parallax="-100%">¡YA NO MAMES!</h2>
         <span class="subtitle" data-swiper-parallax="-60%">Para escalar el tercer pico mas alto de México.</span>
         <p data-swiper-parallax="-30%">Iztaccíhuatl a 5280 msnm.</p>
         </div>
@@ -116,9 +116,9 @@
                       <div class="swiper-slide">
 			<img src="images/slider/slider-ayoloco3.jpg" alt="" title="" />
 				<div class="slider-caption">
-				<h2 data-swiper-parallax="-100%">READY FOR APPS</h2>
-				<span class="subtitle" data-swiper-parallax="-60%">WEB AND NATIVE</span>
-				<p data-swiper-parallax="-30%">You can design and create, and build the most wonderful place in the world. But it takes people to make the dream a reality.</p>
+				<h2 data-swiper-parallax="-100%">LISTO PARA LA AVENTURA</h2>
+				<span class="subtitle" data-swiper-parallax="-60%">LAS MONTAÑAS MAS ALTAS DE MÉXICO</span>
+				<p data-swiper-parallax="-30%">No te lo puedes perder, este 14 y 15 de Octubre.</p>
 				</div>
 		   </div> 		   
                     </div>
@@ -128,8 +128,8 @@
 			<nav class="main-nav">
 			<ul>
 				<li><a href="index.html"><img src="images/icons/green/home.png" alt="" title="" /><span>HOME</span></a></li>
-				<li><a href="about.html"><img src="images/icons/green/user.png" alt="" title="" /><span>ABOUT</span></a></li>
-				<li><a href="features.html"><img src="images/icons/green/settings.png" alt="" title="" /><span>FEATURES</span></a></li>
+				<li><a href="about.html"><img src="images/icons/green/user.png" alt="" title="" /><span>Quienes somos</span></a></li>
+				<li><a href="features.html"><img src="images/icons/green/settings.png" alt="" title="" /><span>Características</span></a></li>
 				
 				<li><a href="blog.html"><img src="images/icons/green/blog.png" alt="" title="" /><span>JOURNAL</span></a></li>	
 				<li><a href="photos.html"><img src="images/icons/green/photos.png" alt="" title="" /><span>PHOTOS</span></a></li>
